# paired-single-cell-pipeline

./: .gitignore  CITATION.cff  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: domains.md  example_skin.md  index.md  methods.md
examples/skin_paired_human/: manifest.csv  project.yaml  skin_adapter.py
src/paired_sc/: __init__.py  paths.py  workflow.py
src/paired_sc/annotate/: __init__.py  adapters.py  core.py
src/paired_sc/cli/: __init__.py  app.py
src/paired_sc/config/: __init__.py  models.py
src/paired_sc/domains/: __init__.py  base.py  cell_cycle.py  cellot.py  differential_expression.py  integration_quality.py  latent.py  liana.py  magic.py  pathway_activity.py  pathway_enrichment.py  pseudobulk_de.py  registry.py  regulatory.py  robustness.py  target_population.py  target_subclustering.py  trajectory.py
src/paired_sc/io/: __init__.py  manifest.py
src/paired_sc/plotting/: __init__.py  core.py
src/paired_sc/preprocess/: __init__.py  core.py
src/paired_sc/qc/: __init__.py  core.py
src/paired_sc/report/: __init__.py  core.py
src/paired_sc/stats/: __init__.py  paired.py
tests/: conftest.py  test_cli.py  test_config.py  test_domains.py  test_manifest.py  test_smoke_core.py
